--- a/ansible/tasks/windows/windows.yml
+++ b/ansible/tasks/windows/windows.yml
@@ -4,20 +4,20 @@
   gather_facts: yes
   tasks:
     - name: Install AD DS feature
-      win_feature:
+      ansible.windows.win_feature:
         name: AD-Domain-Services
         include_management_tools: yes
         state: present
 
     - name: Create a new forest
-      win_domain:
+      microsoft.ad.domain:
         dns_domain_name: casino.bellagio.com
         safe_mode_password: "Velizy78!"
         state: domain_controller
       register: ad_creation
 
     - name: Reboot the server to complete the AD DS installation
-      win_reboot:
+      ansible.windows.win_reboot:
         msg: "Rebooting server to complete AD DS installation"
         pre_reboot_delay: 60
         post_reboot_delay: 60
