--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -5,3 +5,10 @@ all:
         proxmox_node:
           ansible_host: 192.168.48.184
           ansible_user: root
+
+    vpn_ct:
+      hosts:
+        vpn_ct:
+          ansible_host: 172.16.0.1
+          ansible_user: root
+          ansible_ssh_common_args: '-o ProxyJump=root@192.168.48.184'
