--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -6,9 +6,9 @@ all:
           ansible_host: 192.168.48.184
           ansible_user: root
 
-    vpn_ct:
+    vpn:
       hosts:
         vpn_ct:
           ansible_host: 172.16.0.1
           ansible_user: root
-          ansible_ssh_common_args: '-o ProxyJump=root@192.168.48.184'
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -o ForwardAgent=yes root@192.168.48.184 \"ssh-add && nc %h %p\""' 
