--- a/ansible/tasks/core_software/install_requirements.yml
+++ b/ansible/tasks/core_software/install_requirements.yml
@@ -1,26 +1,21 @@
 # Description: This tasks will install python3, ansible and pipx on the remote host.
 
-- name: Upgrade system packages
+- name: apt_update
   apt:
     update_cache: yes
     upgrade: yes
 
-- name: Install Python3
+- name: install_python
   apt:
     name: python3
     state: present
 
-- name: Install Ansible
+- name: install_ansible
   apt:
     name: ansible
     state: present
 
-- name: Install pipx
+- name: install_pipx
   apt:
     name: pipx
     state: present
-
-- name: Install WinRM plugin
-  pip:
-    name: git+https://github.com/diyan/pywinrm.git#egg=pywinrm
-    executable: pipx
