--- a/ansible/tasks/proxmox/deploy_container.yml
+++ b/ansible/tasks/proxmox/deploy_container.yml
@@ -27,7 +27,7 @@
   register: proxmox_ssh_key
   changed_when: false
 
-- name: Save SSH key to temporary file
+- name: save_pubkey
   copy:
     content: "{{ proxmox_ssh_key.stdout }}"
     dest: /tmp/proxmox_ssh_key.pub
@@ -42,12 +42,13 @@
     --memory "{{ container_memory }}" 
     --storage "{{ template_storage }}"
     --rootfs {{ template_storage }}:{{ container_size }}
-    --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}" 
+    --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}",firewall=1
     --onboot 1
     --ssh-public-keys /tmp/proxmox_ssh_key.pub
   when: container_exists.rc != 0
 
-- name: Remove temporary SSH key file
+  
+- name: remove_pubkey
   file:
     path: /tmp/proxmox_ssh_key.pub
     state: absent
