--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -8,7 +8,7 @@ all:
 
     vpn:
       hosts:
-        vpn_ct:
+        core-vpn:
           ansible_host: 172.16.0.1
           ansible_user: root
           ansible_ssh_common_args: '-o ProxyCommand="ssh -o ForwardAgent=yes root@192.168.48.184 \"ssh-add && nc %h %p\""' 
