--- a/ansible/init_playbook.yml
+++ b/ansible/init_playbook.yml
@@ -33,15 +33,38 @@
         container_size: 8
         enable_tun: true
 
+    - name: wait_for_ping
+      wait_for:
+        host: "{{ container_vpn_ip }}"
+        port: 22
+        delay: 3
+        timeout: 300
+        state: started
+      register: ping_result
+      until: ping_result is succeeded
+
   # Deploy ansible on the VPN container
     - name: install_requirements
       import_tasks: tasks/core_software/install_requirements.yml
-      delegate_to: core-vpn 
+      delegate_to: core-vpn
 
+  # Deploy wireguard on the VPN container
+    - name: install_wg
+      import_tasks: tasks/core_software/install_wg.yml
+      delegate_to: core-vpn
+      
   # Deploy the Deployment API on the VPN container (delegated to core-vpn)
     - name: deploy_deployment_api
       import_tasks: tasks/core_software/deploy_deployment_api.yml
       delegate_to: core-vpn 
+
+  # Apply iptables rules for WireGuard
+    - name: setup_iptable
+      import_tasks: tasks/proxmox/setup_forward.yml
+      vars:
+        dest_ip: "{{ container_vpn_ip }}"
+        port: "511-1000"
+        protocol: "udp"
 
   # Deploy SDN demo
     - name: deploy_sdn_demo
