--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -11,4 +11,5 @@ all:
         core-vpn:
           ansible_host: 172.16.0.1
           ansible_user: root
-          ansible_ssh_common_args: '-o ProxyCommand="ssh -o ForwardAgent=yes root@192.168.48.184 \"ssh-add && nc %h %p\"" -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null' 
+          ansible_ssh_private_key_file: ./ssh_key/id_rsa
+          ansible_ssh_common_args: "-o ProxyJump=root@192.168.48.184 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
