--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -6,10 +6,16 @@ sdn_corenet_network: "172.16.0.0/24"
 sdn_corenet_gateway: "172.16.0.254"
 
 template_storage: "local"
-template_alpine_name: "ubuntu-24.04-standard"
+template_name: "ubuntu-24.04-standard"
 
 container_vpn_id: 1000
 container_vpn_name: "core-vpn"
 container_vpn_memory: 1024
 container_vpn_cores: 1
 container_vpn_ip: "172.16.0.1"
+
+container_web_id: 1001
+container_web_name: "core-web"
+container_web_memory: 1024
+container_web_cores: 1
+container_web_ip: "172.16.0.2"
