--- a/workspace/group_vars/all.yml
+++ b/workspace/group_vars/all.yml
@@ -2,19 +2,12 @@
 proxmox_node: "{{ inventory_hostname }}"
 proxmox_host: "192.168.49.182"
 proxmox_user: "etudiant@pam"
+node_name: "pve-e48-eta2"
 proxmox_token_name: "deploy"
 proxmox_token_value: "74c566f8-fea2-48f8-a5d7-7b6f5239759c"
 
-#WinSrv2012
-vm_id_2012: 500
-vm_name_2012: "TESTWinSrv2012"
+vm_id_2012: 111
+vm_name_2012: "winsrv"
 vm_iso_2012: winserv2012.iso
 vm_memory_2012: 1024
 vm_disk_size_2012: 14336
-
-#WinSrv2016
-vm_id_2016: 550
-vm_name_2016: "TESTWinSrv2016"
-vm_iso_2016: winserv2016.iso
-vm_memory_2016: 1024
-vm_disk_size_2016: 14336
