--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -5,6 +5,14 @@
   become: yes
   tasks:
 
+    - name: apply_chmod_ssh_key
+      file:
+        path: ./ssh_key/id_rsa
+        mode: '0600'
+      delegate_to: localhost
+      become: no
+      run_once: true
+
   ### SETUP ANSIBLE ###
 
     # Apply chmod to SSH key
@@ -56,13 +64,13 @@
         container_ip: "{{ container_vpn_ip }}"
         container_size: 8
         enable_tun: true
-    
+
     # Dynamically add the vpn container to inventory with SSH args
     - name: add_vpn_container_to_inventory
       add_host:
         name: "{{ container_vpn_ip }}"
         groups: vpn_containers
-        ansible_ssh_common_args: "-o ProxyJump=root@192.168.48.184 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+        ansible_ssh_common_args: "-o ProxyJump=root@192.168.48.184 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes"
         ansible_ssh_private_key_file: "./ssh_key/id_rsa"
         ansible_user: root
 
@@ -112,7 +120,7 @@
       add_host:
         name: "{{ container_web_ip }}"
         groups: web_containers
-        ansible_ssh_common_args: "-o ProxyJump=root@192.168.48.184 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+        ansible_ssh_common_args: "-o ProxyJump=root@192.168.48.184 -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
         ansible_ssh_private_key_file: "./ssh_key/id_rsa"
         ansible_user: root
 
