--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -131,9 +131,21 @@
       register: ssh_web_result
       until: ssh_web_result is succeeded
 
-  ### PREPARING TEMPLATES ###
+  ### PREPARING WINDOWS TEMPLATES ###
     - name: prepare_windows_template
       import_tasks: tasks/windows/prepare_template.yml
 
-    - name: build_windows_template
-      import_tasks: tasks/windows/build_template.yml
+    - name: build windows template 1
+      include_tasks: tasks/windows/build_template.yml
+      vars:
+        template_id: 111
+
+    - name: build windows template 2
+      include_tasks: tasks/windows/build_template.yml
+      vars:
+        template_id: 112
+
+    - name: build windows template 3
+      include_tasks: tasks/windows/build_template.yml
+      vars:
+        template_id: 113
