--- a/ansible/tasks/windows/build_template.yml
+++ b/ansible/tasks/windows/build_template.yml
@@ -1,7 +1,7 @@
 - name: define_variables
   set_fact:
     vms:
-      - { vm_id: "{{ template_id }}", vm_name: "build-{{ template_id }}", storage_name: "local" }
+      - { vm_id: "{{ template_id }}", vm_name: "build-01", storage_name: "local" }
       - { vm_id: "{{ template_win_2 }}", vm_name: "build-02", storage_name: "local" }
       - { vm_id: "{{ template_win_3}}", vm_name: "build-03", storage_name: "local" }
     iso_file: "winsrv2012.iso"
