--- a/ansible/tasks/core_software/deploy_deployment_api.yml
+++ b/ansible/tasks/core_software/deploy_deployment_api.yml
@@ -11,7 +11,10 @@
 
 - name: install_env
   pip:
-    name: flask
+    name:
+      - flask
+      - proxmoxer
+      - requests
     state: present
     virtualenv: /opt/deployment_api/venv
 
@@ -24,10 +27,10 @@
 
 - name: create_vars_file
   copy:
-    dest: /opt/deployment_api/vars.yml
+    dest: /opt/deployment_api/playbooks/vars.yml
     content: |
       proxmox_ip: "{{ ansible_default_ipv4.address }}"
-      proxmox_user: "{{ ansible_pve_api_user }}@pve"
+      proxmox_user: "{{ ansible_pve_api_user }}"
       proxmox_password: "{{ ansible_pve_api_password }}"
       proxmox_node: "{{ ansible_hostname }}"
     mode: '0644'
