--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -8,15 +8,15 @@ sdn_corenet_gateway: "172.16.0.254"
 template_storage: "local"
 template_name: "ubuntu-24.04-standard"
 
-template_win_1: "111"
-template_win_2: "112"
-template_win_3: "113"
+template_win_1: "11100"
+template_win_2: "11200"
+template_win_3: "11300"
 
 iso_virtio_drivers: "https://fedorapeople.org/groups/virt/virtio-win/direct-downloads/archive-virtio/virtio-win-0.1.189-1/virtio-win.iso"
 iso_virtio_drivers_name: "virtio-win.iso"
 
-iso_winserv2012: "https://go.microsoft.com/fwlink/p/?LinkID=2195443&clcid=0x409&culture=en-us&country=USo"
-iso_winserv2012_name: "winsrv2012.iso"
+iso_winserv2019: "https://go.microsoft.com/fwlink/p/?LinkID=2195167&clcid=0x409&culture=en-us&country=US"
+iso_winserv2019_name: "winsrv2019.iso"
 
 container_deployment_id: 2000
 container_deployment_name: "core-deployment"
