fix(deployment_api) placeholder var

--- a/deployment_api/playbooks/vars.yml
+++ b/deployment_api/playbooks/vars.yml
@@ -1,4 +1,5 @@
-proxmox_ip: "192.168.48.184"
-proxmox_user: "2bgp@pve"
-proxmox_password: "password"
-proxmox_node: "pve-e48-eta4"
+proxmox_ip: ""
+proxmox_user: ""
+proxmox_password: ""
+proxmox_node: ""
+vm_storage: ""
