--- a/ansible/tasks/proxmox/deploy_container.yml
+++ b/ansible/tasks/proxmox/deploy_container.yml
@@ -35,7 +35,7 @@
     --cores "{{ container_cores }}" 
     --memory "{{ container_memory }}" 
     --storage "{{ core_storage }}"
-    --rootfs {{ ct_storage }}:{{ container_size }}
+    --rootfs {{ core_storage }}:{{ container_size }}
     --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}",firewall=1
     --onboot 1
     --ssh-public-keys /tmp/ssh_key_"{{ container_id }}".pub
